# HITL

./: README.md  pyproject.toml
csvs/: compare_hitl.py  edge_output.csv  mock_first_file_input.csv  sin.csv  step.csv
csvs - Copy/: combiner.py  edge.csv
hitl/: client-hitl.py  client-new.py  client-new2.py  client-y.py  clover.proto  compare_telemetry_csvs.py  csv_generator.py  edge_mixed.csv  gnc-testbed.py  sensor-test-data-hf.csv  sin_step_down_mixed.csv  step_down_mixed.csv  test.py  test_data.csv  tinydata.csv
